services alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -149,23 +149,21 @@
 .services-body {
   display: flex;
   width:80vw;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap:60px;
 }
 
 .services-body-img {
-  width: 100%;
-  height:55%;
+  width: 500px;
+  height:500px;
   border-radius: 24px;
 }
 .service-body-img-cont{
-  min-width:50%;
   display:flex;
   justify-content:flex-start;
 }
 
 .services-body-description {
-  padding-top: 40px;
   min-width:40%;
   display:flex;
   flex-direction: column;
@@ -289,8 +287,8 @@
 }
 @media(max-width:1280px){
   .services-body-img {
-  width: 100%;
-  height:75%;
+  width: 450px;
+  height:450px;
 }
 }
 @media(max-width:1025px){
@@ -303,17 +301,19 @@
   width:80vw;
 }
 .services-body-img {
-  width: 100%;
+  width: 350px;
+  height: 350px;
+  align-items: center;
 }
 .hero-image{
   width:420px;
   height:360px;
 }
 .services-body-description {
-  min-width:50%;
-}
-.service-body-img-cont{
   min-width:40%;
+  display:flex;
+  flex-direction: column;
+  gap:10%;
 }
 
 }
@@ -406,7 +406,6 @@
   }
 
   .services-body-description {
-    width: 100%;
     padding-top: 16px;
     display:flex;
     flex-direction:column;
@@ -438,6 +437,14 @@
   padding: 8px 16px;
 
 }
+
+.services-body-description {
+    padding-top: 16px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
 .hero-section {
   max-width: 90vw;
   flex-direction: column;
@@ -474,7 +481,8 @@
   width: 90vw;
 }
 .services-body-img {
-  width: 100%;
+  width: 250px;
+  height: 250px;
 }
 .hero-content{
     display:flex;
